@@ -24,14 +24,14 @@ import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.lang3.mutable.Mutable;
 import org.apache.commons.lang3.mutable.MutableObject;
 import org.apache.commons.lang3.tuple.Pair;
-import org.apache.http.HttpResponse;
-import org.apache.http.HttpStatus;
-import org.apache.http.client.methods.HttpHead;
-import org.apache.http.impl.client.CloseableHttpClient;
-import org.apache.http.protocol.HttpContext;
-import org.apache.http.util.EntityUtils;
-import org.hamcrest.CoreMatchers;
-import org.hamcrest.MatcherAssert;
+import org.apache.hc.client5.http.classic.methods.HttpHead;
+import org.apache.hc.client5.http.impl.classic.CloseableHttpClient;
+import org.apache.hc.client5.http.impl.classic.CloseableHttpResponse;
+import org.apache.hc.core5.http.HttpStatus;
+import org.apache.hc.core5.http.io.entity.EntityUtils;
+import org.apache.hc.core5.http.protocol.HttpContext;
+import org.assertj.core.api.Assertions;
+import org.eclipse.jetty.util.URIUtil;
 import org.jetbrains.annotations.NotNull;
 import org.labkey.remoteapi.collections.CaseInsensitiveHashMap;
 import org.labkey.test.BaseWebDriverTest;
@@ -79,8 +79,7 @@ import java.util.stream.Collectors;
 
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.fail;
-import static org.labkey.test.WebTestHelper.getBaseURL;
-import static org.labkey.test.WebTestHelper.stripContextPath;
+import static org.labkey.test.WebTestHelper.makeRelativeUrl;
 
 public class Crawler
 {
@@ -208,10 +207,11 @@ public class Crawler
             new ControllerActionId("reports", "streamFile"),
             new ControllerActionId("study", "manageStudyProperties"), // Intermittently triggers form dirty alert
 
-            // Disable crawler for single-page apps until we make `beginAt` work with them
+            // Disable crawler for single-page apps until we make the crawler able to navigate them
             new ControllerActionId("biologics", "app"),
             new ControllerActionId("cds", "app"),
             new ControllerActionId("samplemanager", "app"),
+            new ControllerActionId("freezermanager", "app"),
 
             // Actions that error from Admin->GoToModule->MoreModules when module is not enabled
             new ControllerActionId("biologics", "begin"),
@@ -461,6 +461,10 @@ public class Crawler
 
         public UrlToCheck(URL origin, String urlText, int depth)
         {
+            if (depth < 0)
+            {
+                throw new IllegalArgumentException("Invalid crawl depth: " + depth);
+            }
             _origin = origin;
             _urlText = urlText;
             _depth = depth;
@@ -483,7 +487,14 @@ public class Crawler
                     if (!relativeURL.isBlank())
                     {
                         _relativeURL = relativeURL;
-                        _actionId = new ControllerActionId(_relativeURL);
+
+                        ControllerActionId tempActionId = null;
+                        try
+                        {
+                            tempActionId = new ControllerActionId(_relativeURL);;
+                        }
+                        catch (IllegalArgumentException ignore) { } // Probably a resource, not an action.
+                        _actionId = tempActionId;
                     }
                     else
                     {
@@ -529,9 +540,10 @@ public class Crawler
             return _isFromForm;
         }
 
-        public void setFromForm(boolean fromForm)
+        public UrlToCheck setFromForm(boolean fromForm)
         {
             _isFromForm = fromForm;
+            return this;
         }
 
         public URL getOrigin()
@@ -585,7 +597,7 @@ public class Crawler
             String strippedRelativeURL = stripQueryParams(getRelativeURL());
 
             // never go to the exactly same URL (minus query params) twice:
-            if (_urlsChecked.contains(strippedRelativeURL))
+            if (_urlsChecked.contains(URIUtil.decodePath(strippedRelativeURL)))
                 return false;
 
             if (getRelativeURL().contains("export=")) //Study report export uses same URL for export. But don't mark visited yet
@@ -656,10 +668,9 @@ public class Crawler
             _action = action;
         }
 
-        public ControllerActionId(@NotNull String rootRelativeURL)
+        public ControllerActionId(@NotNull String url)
         {
-            rootRelativeURL = stripQueryParams(stripHash(rootRelativeURL));
-            rootRelativeURL = WebTestHelper.stripContextPath(rootRelativeURL);
+            String rootRelativeURL = WebTestHelper.makeRelativeUrl(stripQueryParams(stripHash(url)));
 
             if (rootRelativeURL.startsWith("_webdav/"))
             {
@@ -704,8 +715,6 @@ public class Crawler
                 rootRelativeURL = rootRelativeURL.substring(postControllerSlashIdx+1);
             }
             _folder = StringUtils.strip(rootRelativeURL, "/");
-            if (_folder.endsWith("/"))
-                _folder = _folder.substring(0,_folder.length()-1);
         }
 
         @NotNull public String getAction()
@@ -852,9 +861,7 @@ public class Crawler
                 .replace("]", "%5D")
                 .replace("{", "%7B")
                 .replace("}", "%7D");
-        if (relativeUrl.startsWith(getBaseURL()))
-            relativeUrl = relativeUrl.substring(getBaseURL().length());
-        relativeUrl = stripContextPath(relativeUrl);
+        relativeUrl = makeRelativeUrl(relativeUrl);
         String logMessage = "";
         Mutable<File[]> downloadedFiles = new MutableObject<>();
 
@@ -881,6 +888,7 @@ public class Crawler
             final File[] existingDownloads = downloadDir.listFiles();
 
             long elapsedTime = _test.doAndMaybeWaitForPageToLoad(WebDriverWrapper.WAIT_FOR_PAGE, () -> {
+                final String initialUrl = _test.getDriver().getCurrentUrl();
                 final WebElement mightGoStale = Locators.documentRoot.findElement(_test.getDriver());
                 ExpectedCondition<Boolean> stalenessOf = ExpectedConditions.stalenessOf(mightGoStale);
                 // 'getDriver().navigate().to(fullURL)' assumes navigation and fails for file downloads
@@ -912,6 +920,14 @@ public class Crawler
                             navigated.setValue(false); // Don't wait for page load when a download occurs
                             return true; // Stop waiting
                         }
+                    }
+                    String currentUrl = _test.getDriver().getCurrentUrl();
+                    if (!currentUrl.equals(initialUrl) && stripHash(currentUrl).equals(stripHash(initialUrl)))
+                    {
+                        // URL changed without document going stale.
+                        // Probably a single-page app navigation or page anchor navigation.
+                        navigated.setValue(false);
+                        return true; // Stop waiting
                     }
                     return false; // No navigation or download detected. Continue waiting.
                 }, WebDriverWrapper.WAIT_FOR_PAGE))
@@ -954,6 +970,7 @@ public class Crawler
         // Keep track of where crawler has been
         _actionsVisited.add(actionId);
         _urlsChecked.add(stripQueryParams(relativeURL));
+        _urlsChecked.add(URIUtil.decodePath(stripQueryParams(relativeURL)));
         URL origin = urlToCheck.getOrigin();
         int depth = urlToCheck.getDepth();
         String originMessage = (origin != null ? "\nOriginating page: " + origin : "") +
@@ -1024,13 +1041,15 @@ public class Crawler
                     if (code == 200 && _test.getDriver().getTitle().isEmpty())
                         _warnings.add("Action does not specify title: " + actionId);
 
-                    if (depth >= 0 && !_terminalActions.contains(actionId)) // Negative depth indicates a one-off check
+                    if (actualUrl.toString().startsWith(WebTestHelper.getBaseURL())) // Stop if redirected to an external site
                     {
                         List<Pair<String, Map<String, String>>> linksWithAttributes = _test.getLinkAddresses();
                         for (Pair<String, Map<String, String>> linkWithAttributes : linksWithAttributes)
                         {
                             String href = linkWithAttributes.getLeft();
-                            if (href.contains("://") && !href.startsWith(WebTestHelper.getBaseURL())) // Remote URL
+                            if ((href.startsWith("http://") || href.startsWith("https://")) && // Full URL
+                                    !href.startsWith(WebTestHelper.getBaseURL()) && // Not self
+                                    !href.startsWith("https://www.labkey.com/")) // Trust links to labkey.com
                             {
                                 Map<String, String> attributes = linkWithAttributes.getRight();
                                 String target = StringUtils.trimToEmpty(attributes.get("target"));
@@ -1038,32 +1057,36 @@ public class Crawler
                                 if (target.equals("_blank"))
                                 {
                                     // Issue 40708: Create automated tests to look for anchor tags with link to an outside server
-                                    MatcherAssert.assertThat(String.format("Bad 'rel' attribute for link to %s. On Page: %s", href, actualUrl),
-                                            rel, CoreMatchers.hasItems("noopener", "noreferrer"));
+                                    Assertions.assertThat(rel).as("Bad 'rel' attribute for link to %s. On Page: %s".formatted(href, actualUrl))
+                                            .containsAll(List.of("noopener", "noreferrer"));
                                 }
                             }
                         }
-                        List<String> linkAddresses = linksWithAttributes.stream().map(Pair::getLeft).collect(Collectors.toList());
-                        List<String> formAddresses = _test.getFormAddresses();
-                        linkAddresses.addAll(formAddresses);
 
-                        for (String url : linkAddresses)
+                        int nextDepth = depth + 1;
+
+                        for (Pair<String, ?> p : linksWithAttributes)
                         {
+                            String url = p.getLeft();
                             try
                             {
-                                UrlToCheck candidateUrl = new UrlToCheck(actualUrl, url, depth + 1);
-                                if (candidateUrl.isVisitableURL())
-                                {
-                                    candidateUrl.setFromForm(formAddresses.contains(url));
-                                    newUrlsToCheck.add(candidateUrl);
-                                }
+                                newUrlsToCheck.add(new UrlToCheck(actualUrl, url, nextDepth));
                             }
                             catch (IllegalArgumentException badUrl)
                             {
-                                if (!formAddresses.contains(url)) // forms might have strange target action (e.g. '../formulations')
-                                {
-                                    throw new AssertionError("Unable to parse link: \"" + url + "\". " + originMessage, badUrl);
-                                }
+                                throw new IllegalArgumentException("Unable to parse link: \"" + url + "\". " + originMessage, badUrl);
+                            }
+                        }
+
+                        for (String url : _test.getFormAddresses())
+                        {
+                            try
+                            {
+                                newUrlsToCheck.add(new UrlToCheck(actualUrl, url, nextDepth).setFromForm(true));
+                            }
+                            catch (IllegalArgumentException ignore)
+                            {
+                                // forms might have strange target action (e.g. '../formulations')
                             }
                         }
                     }
@@ -1107,7 +1130,7 @@ public class Crawler
             throw new RuntimeException(e);
         }
 
-        if (urlToCheck.isInjectableURL() && _injectionCheckEnabled)
+        if (urlToCheck.isInjectableURL() && _injectionCheckEnabled && WebTestHelper.isTestServerUrl(actualUrl.toString()))
         {
             TestLogger.increaseIndent();
             try
@@ -1120,7 +1143,9 @@ public class Crawler
             }
         }
 
-        return newUrlsToCheck;
+        return _terminalActions.contains(actionId)
+                ? Collections.emptyList()
+                : newUrlsToCheck.stream().filter(UrlToCheck::isVisitableURL).toList();
     }
 
     private static final ControllerActionId spiderAction = new ControllerActionId("admin", "spider");
@@ -1161,25 +1186,22 @@ public class Crawler
 
         // Check whether 404 was due to a missing action
         HttpContext context = WebTestHelper.getBasicHttpContext();
-        HttpResponse response = null;
 
-        try (CloseableHttpClient httpClient = (CloseableHttpClient)WebTestHelper.getHttpClient())
+        try (CloseableHttpClient httpClient = WebTestHelper.getHttpClient())
         {
             // LabKey actions don't support HEAD requests. Only a non-existent action will 404
             var method = new HttpHead(url);
-            response = httpClient.execute(method, context);
-            // If url 404s, then the action doesn't exist
-            return response.getStatusLine().getStatusCode() != HttpStatus.SC_NOT_FOUND;
+            try (CloseableHttpResponse response = httpClient.execute(method, context))
+            {
+                EntityUtils.consumeQuietly(response.getEntity());
+                // If url 404s, then the action doesn't exist
+                return response.getCode() != HttpStatus.SC_NOT_FOUND;
+            }
         }
         catch (IOException | IllegalArgumentException e)
         {
             TestLogger.warn("Unable to verify existence of action: " + urlToCheck.getActionId(), e);
             return true;
-        }
-        finally
-        {
-            if (null != response)
-                EntityUtils.consumeQuietly(response.getEntity());
         }
     }
 
@@ -1202,8 +1224,8 @@ public class Crawler
 
     public static final String injectedAlert = "8(";
     public static final String maliciousScript = "alert('" + injectedAlert + "')";
-    public static final String injectScriptBlock = "-->\">'>'\"<script>" + maliciousScript + "</script>";
-    public static final String injectAttributeScript = "-->\">'>'\"</script><img src=\"xss\" onerror=\"" + maliciousScript + "\">";
+    public static final String injectScriptBlock = "\">'>'\"<script>" + maliciousScript + "</script>";
+    public static final String injectAttributeScript = "\">'>'\"</script><img src=\"x\" onerror=\"" + maliciousScript + "\">";
 
     public static void tryInject(WebDriverWrapper test, Runnable r)
     {
